--- a/Resources/webview/index.html
+++ b/Resources/webview/index.html
@@ -72,8 +72,16 @@
     <h1>Ignite Youth Conference</h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+
+    <a href="#">Home</a> - <a href="#social">Social</a> - 
+    <a href="#my-events">My events</a> - 
+    <a href="#events/1">Event 1</a> - <a href="#events/2">Event 2</a>
+    <div id="dummyDom"></div>
+    <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/underscore-min.js"></script>
+    <script src="js/backbone-min.js"></script>
+    <!-- our app -->
+    <script src="js/app.js"></script>
   </body>
 </html>
