Adding backbone skeelton

--- a/Resources/webview/index.html
+++ b/Resources/webview/index.html
@@ -142,5 +142,22 @@
     <script src="js/backbone-min.js"></script>
     <!-- our app -->
     <script src="js/app.js"></script>
+
+    <!-- our templates -->
+    <script type="text/template" id="socialTemplate">
+      <h1>These are our social links</h2>
+    </script>
+
+    <script type="text/template" id="homeTemplate">
+      <h1>Home: Welcome!</h2>
+    </script>
+
+    <script type="text/template" id="eventTemplate">
+      <h1>Event details for: <%= event.id %></h2>
+    </script>
+
+    <script type="text/template" id="myEventsTemplate">
+      <h1>My events</h1>
+    </script>
   </body>
 </html>
