--- a/Resources/webview/index.html
+++ b/Resources/webview/index.html
@@ -132,7 +132,7 @@
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
-    <a href="#">Home</a> - <a href="#social">Social</a> - 
+    <a href="#home">Home</a> - <a href="#social">Social</a> - 
     <a href="#my-events">My events</a> - 
     <a href="#events/1">Event 1</a> - <a href="#events/2">Event 2</a>
     <div id="dummyDom"></div>
