--- a/Resources/webview/index.html
+++ b/Resources/webview/index.html
@@ -140,6 +140,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/underscore-min.js"></script>
     <script src="js/backbone-min.js"></script>
+    <script src="js/handlebars-v2.0.0.js"></script>
     <!-- our app -->
     <script src="js/app.js"></script>
 
@@ -153,7 +154,7 @@
     </script>
 
     <script type="text/template" id="eventTemplate">
-      <h1>Event details for: <%= event.id %></h2>
+      <h1>Event details for: {{event.id}}</h2>
     </script>
 
     <script type="text/template" id="myEventsTemplate">
